--- a/kv-stuttgart_jungschartag/Dockerfile
+++ b/kv-stuttgart_jungschartag/Dockerfile
@@ -2,6 +2,8 @@
 
 FROM python:3.12-slim
 
+LABEL org.opencontainers.image.source https://github.com/TBen2000/Pretix2Nextcloud
+
 WORKDIR /app
 
 COPY requirements.txt .
