--- a/kv-stuttgart_jungschartag/Dockerfile
+++ b/kv-stuttgart_jungschartag/Dockerfile
@@ -4,6 +4,9 @@ FROM python:3.12-slim
 
 LABEL org.opencontainers.image.source https://github.com/TBen2000/Pretix2Nextcloud
 
+RUN useradd -m p2n_user
+USER p2n_user
+
 WORKDIR /app
 
 COPY requirements.txt .
