--- a/kv-stuttgart_jungschartag/Dockerfile
+++ b/kv-stuttgart_jungschartag/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:3.12-slim
 
-LABEL org.opencontainers.image.source https://github.com/TBen2000/Pretix2Nextcloud
+LABEL org.opencontainers.image.source=https://github.com/TBen2000/Pretix2Nextcloud
 
 RUN useradd -m p2n_user
 USER p2n_user
