fix: add missing registry parameter in Docker login action

--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -15,7 +15,8 @@ jobs:
         with:
           username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
-        
+          registry: ghcr.io
+
       # Set the PATH for local bin and upgrade pip
       - name: Set PATH and upgrade pip
         run: |
