refactor: export classes Main, Environment, PretixAPI, Excel, and Nextcloud to a generalized external P2N.py file so that kv-stuttgart-jungschartag.py only contains case-specific attributes

--- a/kv-stuttgart_jungschartag/Dockerfile
+++ b/kv-stuttgart_jungschartag/Dockerfile
@@ -13,5 +13,6 @@ COPY requirements.txt .
 RUN /app/venv/bin/pip install --no-cache-dir -r requirements.txt
 
 COPY kv-stuttgart-jungschartag.py .
+COPY ../P2N.py .
 
 CMD ["/app/venv/bin/python", "kv-stuttgart-jungschartag.py"]
