--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -1,28 +1,60 @@
-name: Docker Image CI for GHCR
+name: Build & Publish Docker Images
 
 on:
-  push
+  push:
 
 jobs:
-  build_and_publish:
+  build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
-      # Docker login
-      - name: Docker login
+      - name: Login to GHCR
         uses: docker/login-action@v2
         with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
-          registry: ghcr.io
 
-      # Build the Docker image and push it
-      - name: Build and push the image
+
+      ##################################################################
+      # IMAGE 1 — pretix2nextcloud-kv-stuttgart-jungschartag
+      ##################################################################
+
+      - name: Build base image – kv-stuttgart-jungschartag
         run: |
-          docker build . \
-            -f kv-stuttgart_jungschartag/Dockerfile \
-            --build-arg VERSION=${{ github.sha }} \
-            --tag ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag:latest
+          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
+          DOCKERFILE=kv-stuttgart_jungschartag/Dockerfile
 
-          docker push ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag:latest
+          docker build . \
+            -f $DOCKERFILE \
+            --tag $IMAGE:base
+
+      - name: Push base image – kv-stuttgart-jungschartag
+        id: push_base_jungschartag
+        run: |
+          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
+
+          docker push $IMAGE:base | tee output.txt
+          DIGEST=$(grep -o 'sha256:[a-f0-9]\+' output.txt | head -n 1)
+
+          echo "digest=$DIGEST" >> $GITHUB_OUTPUT
+
+      # Build the final image with digest injected as env
+      - name: Build final image with digest – kv-stuttgart-jungschartag
+        run: |
+          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
+          DIGEST="${{ steps.push_base_jungschartag.outputs.digest }}"
+
+          echo "FROM $IMAGE:base" > Dockerfile.inject
+          echo "ENV DOCKER_IMAGE=$DIGEST" >> Dockerfile.inject
+
+          docker build . \
+            -f Dockerfile.inject \
+            --tag $IMAGE:latest
+
+      - name: Push final image – kv-stuttgart-jungschartag
+        run: |
+          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
+          docker push $IMAGE:latest
