--- a/.github/workflows/publish-ghcr.yaml
+++ b/.github/workflows/publish-ghcr.yaml
@@ -2,10 +2,102 @@ name: Build & Publish Docker Images
 
 on:
   push:
+    branches:
+      - main
+
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+
+  # ------------------------------------------------------------------
+  # JOB 1: Evaluate what to build
+  # ------------------------------------------------------------------
+  target-selector:
     runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      should_run: ${{ steps.set-matrix.outputs.should_run }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check for file changes
+        uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            global:
+              - 'P2N.py'
+              - 'requirements.txt'
+              - '.github/workflows/publish-ghcr.yaml'
+            kv-stuttgart-jungschartag:
+              - 'kv-stuttgart_jungschartag/**'
+            kv-stuttgart-teencamp:
+              - 'kv-stuttgart_teencamp/**'
+            kv-stuttgart-zeltlager_jungs:
+              - 'kv-stuttgart_zeltlager-jungs/**'
+            kv-stuttgart-zeltlager_maedels:
+              - 'kv-stuttgart_zeltlager-maedels/**'
+
+      # Generate JSON Matrix for next job
+      - name: Generate Matrix
+        id: set-matrix
+        shell: python
+        run: |
+          import json
+          import os
+
+          # Konfiguration aller deiner Images
+          # folder: Der Ordnername im Repo
+          # name:  Der Teil des Image-Namens nach 'pretix2nextcloud-'
+          # id:    Muss mit dem Filter-Namen oben übereinstimmen
+          all_images = [
+            {"id": "kv-stuttgart-jungschartag",      "folder": "kv-stuttgart_jungschartag",      "name": "kv-stuttgart-jungschartag"},
+            {"id": "kv-stuttgart-teencamp",          "folder": "kv-stuttgart_teencamp",          "name": "kv-stuttgart-teencamp"},
+            {"id": "kv-stuttgart-zeltlager_jungs",   "folder": "kv-stuttgart_zeltlager-jungs",   "name": "kv-stuttgart-zeltlager-jungs"},
+            {"id": "kv-stuttgart-zeltlager_maedels", "folder": "kv-stuttgart_zeltlager-maedels", "name": "kv-stuttgart-zeltlager-maedels"}
+          ]
+
+          # Änderungen aus dem vorherigen Schritt lesen
+          changes = json.loads('${{ toJson(steps.changes.outputs) }}')
+          
+          final_list = []
+          
+          # LOGIK: Wenn Global oder Workflow Dispatch -> Alles bauen
+          if changes.get('global') == 'true' or '${{ github.event_name }}' == 'workflow_dispatch':
+              print("Global change detected. Building ALL images.")
+              final_list = all_images
+          else:
+              # Sonst: Nur die Images bauen, deren Ordner sich geändert hat
+              for img in all_images:
+                  if changes.get(img['id']) == 'true':
+                      final_list.append(img)
+
+          # Output setzen für GitHub Actions
+          if len(final_list) > 0:
+              print(f"Building images: {[i['name'] for i in final_list]}")
+              with open(os.environ['GITHUB_OUTPUT'], 'a') as fh:
+                  fh.write(f"matrix={json.dumps(final_list)}\n")
+                  fh.write("should_run=true\n")
+          else:
+              print("No relevant changes detected.")
+              with open(os.environ['GITHUB_OUTPUT'], 'a') as fh:
+                  fh.write("should_run=false\n")
+
+  # ------------------------------------------------------------------
+  # JOB 2: Build (runs dynamically based on Job 1)
+  # ------------------------------------------------------------------
+  build-and-push:
+    needs: target-selector
+    if: needs.target-selector.outputs.should_run == 'true'
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include: ${{ fromJson(needs.target-selector.outputs.matrix) }}
+
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
@@ -17,36 +109,45 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
 
-
-      ##################################################################
-      # IMAGE 1 — pretix2nextcloud-kv-stuttgart-jungschartag
-      ##################################################################
-
-      - name: Build base image -> kv-stuttgart-jungschartag
+      # --------------------------------------------------------------
+      # Generic build process (Variables are retrieved from the matrix)
+      # --------------------------------------------------------------
+      
+      - name: Build base image -> ${{ matrix.name }}
         run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
-          DOCKERFILE=kv-stuttgart_jungschartag/Dockerfile
+          IMAGE=ghcr.io/${{ github.repository_owner }}/pretix2nextcloud-${{ matrix.name }}
+          # Kleinschreibung erzwingen (Docker mag keine Großbuchstaben)
+          IMAGE=$(echo $IMAGE | tr '[:upper:]' '[:lower:]')
+          
+          DOCKERFILE=${{ matrix.folder }}/Dockerfile
+
+          echo "Building Base: $IMAGE:base using $DOCKERFILE"
 
           docker build . \
             -f $DOCKERFILE \
             --tag $IMAGE:base
 
-      - name: Push base image -> kv-stuttgart-jungschartag
-        id: push_base_kv-stuttgart-jungschartag
+      - name: Push base image -> ${{ matrix.name }}
+        id: push_base
         run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
+          IMAGE=ghcr.io/${{ github.repository_owner }}/pretix2nextcloud-${{ matrix.name }}
+          IMAGE=$(echo $IMAGE | tr '[:upper:]' '[:lower:]')
 
           docker push $IMAGE:base | tee output.txt
           DIGEST=$(grep -o 'sha256:[a-f0-9]\+' output.txt | head -n 1)
-
+          
           echo "digest=$DIGEST" >> $GITHUB_OUTPUT
 
-      # Build the final image with digest injected as env
-      - name: Build final image with digest -> kv-stuttgart-jungschartag
+      - name: Build final image with digest -> ${{ matrix.name }}
         run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
-          DIGEST="${{ steps.push_base_kv-stuttgart-jungschartag.outputs.digest }}"
+          IMAGE=ghcr.io/${{ github.repository_owner }}/pretix2nextcloud-${{ matrix.name }}
+          IMAGE=$(echo $IMAGE | tr '[:upper:]' '[:lower:]')
+          
+          DIGEST="${{ steps.push_base.outputs.digest }}"
 
+          echo "Injecting Digest: $DIGEST"
+
+          # Hier wird dein Injektions-Trick angewendet
           echo "FROM $IMAGE:base" > Dockerfile.inject
           echo "ENV DOCKER_IMAGE=$DIGEST" >> Dockerfile.inject
 
@@ -54,136 +155,9 @@ jobs:
             -f Dockerfile.inject \
             --tag $IMAGE:latest
 
-      - name: Push final image -> kv-stuttgart-jungschartag
+      - name: Push final image -> ${{ matrix.name }}
         run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-jungschartag
-          docker push $IMAGE:latest
-
-
-
-      ##################################################################
-      # IMAGE 2 — pretix2nextcloud-kv-stuttgart-teencamp
-      ##################################################################
-
-      - name: Build base image -> kv-stuttgart-teencamp
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-teencamp
-          DOCKERFILE=kv-stuttgart_teencamp/Dockerfile
-
-          docker build . \
-            -f $DOCKERFILE \
-            --tag $IMAGE:base
-
-      - name: Push base image -> kv-stuttgart-teencamp
-        id: push_base_kv-stuttgart-teencamp
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-teencamp
-
-          docker push $IMAGE:base | tee output.txt
-          DIGEST=$(grep -o 'sha256:[a-f0-9]\+' output.txt | head -n 1)
-
-          echo "digest=$DIGEST" >> $GITHUB_OUTPUT
-
-      # Build the final image with digest injected as env
-      - name: Build final image with digest -> kv-stuttgart-teencamp
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-teencamp
-          DIGEST="${{ steps.push_base_kv-stuttgart-teencamp.outputs.digest }}"
-
-          echo "FROM $IMAGE:base" > Dockerfile.inject
-          echo "ENV DOCKER_IMAGE=$DIGEST" >> Dockerfile.inject
-
-          docker build . \
-            -f Dockerfile.inject \
-            --tag $IMAGE:latest
-
-      - name: Push final image -> kv-stuttgart-teencamp
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-teencamp
-          docker push $IMAGE:latest
-
-
-
-      ##################################################################
-      # IMAGE 3 — pretix2nextcloud-kv-stuttgart-zeltlager-jungs
-      ##################################################################
-
-      - name: Build base image -> kv-stuttgart-zeltlager-jungs
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-jungs
-          DOCKERFILE=kv-stuttgart_zeltlager-jungs/Dockerfile
-
-          docker build . \
-            -f $DOCKERFILE \
-            --tag $IMAGE:base
-
-      - name: Push base image -> kv-stuttgart-zeltlager-jungs
-        id: push_base_kv-stuttgart-zeltlager-jungs
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-jungs
-
-          docker push $IMAGE:base | tee output.txt
-          DIGEST=$(grep -o 'sha256:[a-f0-9]\+' output.txt | head -n 1)
-
-          echo "digest=$DIGEST" >> $GITHUB_OUTPUT
-
-      # Build the final image with digest injected as env
-      - name: Build final image with digest -> kv-stuttgart-zeltlager-jungs
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-jungs
-          DIGEST="${{ steps.push_base_kv-stuttgart-zeltlager-jungs.outputs.digest }}"
-
-          echo "FROM $IMAGE:base" > Dockerfile.inject
-          echo "ENV DOCKER_IMAGE=$DIGEST" >> Dockerfile.inject
-
-          docker build . \
-            -f Dockerfile.inject \
-            --tag $IMAGE:latest
-
-      - name: Push final image -> kv-stuttgart-zeltlager-jungs
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-jungs
-          docker push $IMAGE:latest
-
-
-
-      ##################################################################
-      # IMAGE 4 — pretix2nextcloud-kv-stuttgart-zeltlager-maedels
-      ##################################################################
-
-      - name: Build base image -> kv-stuttgart-zeltlager-maedels
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-maedels
-          DOCKERFILE=kv-stuttgart_zeltlager-maedels/Dockerfile
-
-          docker build . \
-            -f $DOCKERFILE \
-            --tag $IMAGE:base
-
-      - name: Push base image -> kv-stuttgart-zeltlager-maedels
-        id: push_base_kv-stuttgart-zeltlager-maedels
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-maedels
-
-          docker push $IMAGE:base | tee output.txt
-          DIGEST=$(grep -o 'sha256:[a-f0-9]\+' output.txt | head -n 1)
-
-          echo "digest=$DIGEST" >> $GITHUB_OUTPUT
-
-      # Build the final image with digest injected as env
-      - name: Build final image with digest -> kv-stuttgart-zeltlager-maedels
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-maedels
-          DIGEST="${{ steps.push_base_kv-stuttgart-zeltlager-maedels.outputs.digest }}"
-
-          echo "FROM $IMAGE:base" > Dockerfile.inject
-          echo "ENV DOCKER_IMAGE=$DIGEST" >> Dockerfile.inject
-
-          docker build . \
-            -f Dockerfile.inject \
-            --tag $IMAGE:latest
-
-      - name: Push final image -> kv-stuttgart-zeltlager-maedels
-        run: |
-          IMAGE=ghcr.io/tben2000/pretix2nextcloud-kv-stuttgart-zeltlager-maedels
+          IMAGE=ghcr.io/${{ github.repository_owner }}/pretix2nextcloud-${{ matrix.name }}
+          IMAGE=$(echo $IMAGE | tr '[:upper:]' '[:lower:]')
+          
           docker push $IMAGE:latest
